--- a/.github/workflows/gradiator.yml
+++ b/.github/workflows/gradiator.yml
@@ -1,33 +1,20 @@
-# This is a basic workflow to help you get started with Actions
+name: Gradiator
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main, staging ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, main, staging ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+  jobs:
+    gradiator:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Feature Tests
+          uses: fjogeleit/http-request-action@master
+          with:
+            url: 'https://https://gradiator.herokuapp.com'
+            method: 'POST'
+            data: '{ "projectName": "http://jacobknaack.me/book-app", "ProjectUrl": "https://book-app-content-test.herokuapp.com" }'
+        - name: Show Response
+          run: echo ${{ steps.myRequest.outputs.response }}
