fixes typos in request JSON

--- a/.github/workflows/gradiator.yml
+++ b/.github/workflows/gradiator.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           url: 'https://gradiator.herokuapp.com'
           method: 'POST'
-          data: '{ "projectName": "http://jacobknaack.me/book-app", "ProjectUrl": "https://book-app-content-test.herokuapp.com" }'
+          data: '{ "projectName": "http://jacobknaack.me/book-app", "projectURL": "https://book-app-content-test.herokuapp.com" }'
           timeout: 30000
       - name: Show Response
         run: echo ${{ steps.results.outputs.response }}
